[package]
name = "complate"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "Standardizing messages the right way."
homepage = "https://replicadse.github.io/complate/"
repository = "https://github.com/replicadse/complate"
keywords = ["cli", "template", "replace", "standardizing"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
  default = ["backend+cli"]
  "backend+cli" = ["dialoguer"]
  "backend+ui" = ["cursive", "fui"]

[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dependencies]
async-trait = "^0.1"
clap = "^2.34"
handlebars = "^4.1"

dialoguer = { version = "^0.8", optional = true }
cursive = { version = "^0.16", optional = true }
fui = { version = "^2.0", optional = true }

bytes = "^1.1.0"
futures = "^0.3.0"
env_logger = "^0.9.0"
mime = "^0.3.0"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
json = "^0.12"
