[package]
name = "complate"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "Standardizing messages the right way."
homepage = "https://replicadse.github.io/complate/"
repository = "https://github.com/replicadse/complate"
keywords = ["cli", "template", "replace", "standardizing"]
categories = ["command-line-utilities"]
readme = "docs/README.md"
build = "src/build.rs"

[features]
  default = ["backend+cli"]
  "backend+cli" = ["dialoguer"]
  "backend+ui" = ["cursive", "fui"]

[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dependencies]
clap = "^4.1.8"
async-trait = "^0.1"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros" ] }
handlebars = "^4.1"
bytes = "^1.1.0"
mime = "^0.3.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"

cursive = { version = "^0.16", optional = true }
dialoguer = { version = "^0.8", optional = true }
fui = { version = "^2.0", optional = true }
clap_mangen = "0.2.9"
clap_complete = "4.1.4"

[build-dependencies]
clap = "^4.1.8"
clap_complete = "4.1.4"
clap_mangen = "0.2.9"
