[package]
name = "complate"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "A powerful text templating tool."
homepage = "https://replicadse.github.io/complate"
repository = "https://github.com/replicadse/complate"
keywords = ["cli", "template", "replace", "standardizing"]
categories = ["command-line-utilities"]
readme = "docs/README.md"
autobins = false

[lib]
name = "complate"
path = "./src/lib.rs"

[[bin]]
name = "complate"
path = "./src/main.rs"

[features]
default = ["backend+cli"]
"backend+cli" = ["dialoguer"]

[dependencies]
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
handlebars = "4.3.7"
bytes = "1.4.0"
mime = "0.3.17"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
dialoguer = { version = "0.10.4", optional = true }
schemars = "0.8.12"
fancy-regex = "0.11.0"
indoc = "2.0.3"
anyhow = "1.0.86"

[dev-dependencies]
clitest = { git = "https://github.com/replicadse/clitest_rs", branch = "master" }
hoox = "0.1.4"
